@@ -95,6 +95,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <packageOutputDirectory>${project.build.directory}</packageOutputDirectory>
+    <projectTestSourceDirectory>${project.build.testSourceDirectory}</projectTestSourceDirectory>
     <legal><![CDATA[[INFO] Any downloads listed may be third party software.  Microsoft grants you no rights for third party software.]]></legal>
     <testMode>playback</testMode>
     <playbackServerPort>11080</playbackServerPort>
@@ -214,6 +215,9 @@
 
     <!-- Set this to an empty value to enable the compiler to fail on usage of deprecated APIs. -->
     <compiler.failondeprecatedstatus>-</compiler.failondeprecatedstatus>
+
+    <!-- Used by Java 18 and later to allow the security manager to be set while testing and linting. -->
+    <java.security.manager.configuration></java.security.manager.configuration>
   </properties>
 
   <build>
@@ -598,7 +602,7 @@
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>9.2</version> <!-- {x-version-update;com.puppycrawl.tools:checkstyle;external_dependency} -->
+              <version>9.3</version> <!-- {x-version-update;com.puppycrawl.tools:checkstyle;external_dependency} -->
             </dependency>
           </dependencies>
           <configuration>
@@ -633,6 +637,12 @@
               <artifactId>spotbugs</artifactId>
               <version>4.2.2</version> <!-- {x-version-update;com.github.spotbugs:spotbugs;external_dependency} -->
             </dependency>
+            <!-- Needed as the version of Spotbugs being used isn't compatible is Java 18+ without this. -->
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>9.3</version> <!-- {x-version-update;org.ow2.asm:asm;external_dependency} -->
+            </dependency>
           </dependencies>
           <configuration>
             <skip>${spotbugs.skip}</skip>
@@ -645,6 +655,9 @@
             <failOnError>${spotbugs.failOnError}</failOnError>
             <!-- Set this to true when src/samples and src/test are spotbugs clean in all Track 2 SDKs -->
             <includeTests>${spotbugs.includeTests}</includeTests>
+            <jvmArgs>
+              ${java.security.manager.configuration}
+            </jvmArgs>
 
             <!-- Enable this plugin when issues documented are fixed -->
             <!--          <plugins>-->
@@ -1148,6 +1161,7 @@
                 <!-- In later versions of Java, java.base doesn't open java.lang.invoke to azure-core, so it needs to be done with this directive. This only affects tests. -->
                 --add-opens java.base/java.lang.invoke=com.azure.core
                 ${additionalFailsafeArgLine}
+                ${java.security.manager.configuration}
               </argLine>
             </configuration>
           </plugin>
@@ -1531,33 +1545,36 @@
       </build>
     </profile>
 
-    <profile>
-      <id>external-dependency-version-overrides</id>
-      <activation>
-        <property>
-          <name>env.AZURE_VERSION_OVERRIDE_TESTS</name>
-        </property>
-      </activation>
-      <repositories>
-        <repository>
-          <id>repository.spring.milestone</id>
-          <name>Spring Milestone Repository</name>
-          <url>https://repo.spring.io/milestone</url>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-        </repository>
-      </repositories>
-    </profile>
+    <!-- Used when Reactor had milestone releases to the Spring Milestone repository. -->
+    <!-- If Reactor milestones are needed again in the future, and they're being released -->
+    <!-- to the Spring Milestone repository uncomment the XML below. -->
+<!--    <profile>-->
+<!--      <id>external-dependency-version-overrides</id>-->
+<!--      <activation>-->
+<!--        <property>-->
+<!--          <name>env.AZURE_VERSION_OVERRIDE_TESTS</name>-->
+<!--        </property>-->
+<!--      </activation>-->
+<!--      <repositories>-->
+<!--        <repository>-->
+<!--          <id>repository.spring.milestone</id>-->
+<!--          <name>Spring Milestone Repository</name>-->
+<!--          <url>https://repo.spring.io/milestone</url>-->
+<!--          <releases>-->
+<!--            <enabled>true</enabled>-->
+<!--          </releases>-->
+<!--          <snapshots>-->
+<!--            <enabled>true</enabled>-->
+<!--          </snapshots>-->
+<!--        </repository>-->
+<!--      </repositories>-->
+<!--    </profile>-->
 
     <profile>
       <id>test-module-base-compile</id>
       <activation>
         <file>
-          <exists>${build.testSourceDirectory}/module-info.java</exists>
+          <exists>${projectTestSourceDirectory}/module-info.java</exists>
         </file>
       </activation>
 
@@ -1589,6 +1606,17 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>java-18-plus-allow-securitymanager</id>
+      <activation>
+        <jdk>[18,)</jdk>
+      </activation>
+
+      <properties>
+        <java.security.manager.configuration>-Djava.security.manager=allow</java.security.manager.configuration>
+      </properties>
     </profile>
   </profiles>
 </project>
